--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<tp-movies-nx-welcome></tp-movies-nx-welcome> <router-outlet></router-outlet>
+<router-outlet></router-outlet>
+  <!-- <tp-movies-test-database></tp-movies-test-database> -->
+  <!-- <tp-movies-app-form></tp-movies-app-form> -->
