--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,15 @@
-$black: #010101;
+$black: #0B091C;
 $white: #fefefe;
+$grey: #7B9399;
+$purple: #D702FB;
+$blue: #1A54FF;
+
+
+@mixin btn {
+    background-image: linear-gradient(220deg, $purple, $blue);
+    color: $white;
+    border: none;
+    padding: 2rem;
+    border-radius: 10px;
+    font-size: 1.5rem;
+}
