--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header-wrapper">
-    <nav>
+    <!-- <nav>
         <ul class="link-wrapper">
             <li>
                 <a href="#">Films</a>
@@ -11,5 +11,12 @@
                 <a href="#">Documentaire</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
+        <span id="logo">
+            <img src="../../assets/img/logo.svg" alt="" />
+            <span class="header-title">Ndelok</span>
+        </span>
+        <span class="header-notification">
+            <img src="../../assets/img/notifications.svg" alt="" />
+        </span>
 </header>
