--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,26 +4,62 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    background-color: #86A3B8;
+    height: 10vh;
+    background-color: #0B091C;
+    padding: 20px;
 
-    nav {
+    // nav {
+    //     display: flex;
+
+    //     ul {
+    //         list-style: none;
+    //         display: flex;
+    //         gap: 1rem;
+
+    //         li {
+    //             display: flex;
+    //             text-transform: uppercase;
+    //             cursor: pointer;
+
+    //             a {
+    //                 text-decoration: none;
+    //                 color: $black;
+    //             }
+    //         }
+    //     }
+    // }
+
+    #logo {
         display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+    }
 
-        ul {
-            list-style: none;
-            display: flex;
-            gap: 1rem;
+    img {
+        margin-right: 10px;
+        width: 28px;
+        height: 28px;
+    }
 
-            li {
-                display: flex;
-                text-transform: uppercase;
-                cursor: pointer;
+    .header-title {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        color: #FFFFFF;
+    }
 
-                a {
-                    text-decoration: none;
-                    color: $black;
-                }
-            }
-        }
+    .header-notification {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
