--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,29 +5,8 @@
     justify-content: space-between;
     width: 100%;
     height: 10vh;
-    background-color: #0B091C;
+    background-color: $black;
     padding: 20px;
-
-    // nav {
-    //     display: flex;
-
-    //     ul {
-    //         list-style: none;
-    //         display: flex;
-    //         gap: 1rem;
-
-    //         li {
-    //             display: flex;
-    //             text-transform: uppercase;
-    //             cursor: pointer;
-
-    //             a {
-    //                 text-decoration: none;
-    //                 color: $black;
-    //             }
-    //         }
-    //     }
-    // }
 
     #logo {
         display: flex;
@@ -48,7 +27,7 @@
         font-weight: 400;
         font-size: 18px;
         line-height: 22px;
-        color: #FFFFFF;
+        color: $white;
     }
 
     .header-notification {
