feat: component image user V1 (#4)

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
             </a>
         </li>
         <li>
-            <a routerLink="/profile">
+            <a routerLink="/movies">
                 <img src="../../assets/img/profile-icon.svg" alt="">
             </a>
         </li>
