--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,3 +1,4 @@
+<tp-movies-notification-push></tp-movies-notification-push>
 <tp-movies-header></tp-movies-header>
 <div *ngIf="movies$ | async as movie">
     <ul>
@@ -6,7 +7,6 @@
             <img src="https://image.tmdb.org/t/p/w500{{aaa.poster_path}}" />
             <h3 *ngIf="aaa.adult">Adult movie: Yes</h3>
             <p>Release date : {{aaa.release_date}}</p>
-
         </li>
     </ul>
     <button>Aled le bouton</button>
