--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -3,8 +3,9 @@
 
 .homepage-container {
     background-color: $black;
+    padding-top: 2rem;
 
     .search-input-container {
-        padding-top: 2rem;
+        margin-bottom: 2rem;
     }
 }
