--- a/src/app/movie-container/movie-container.component.html
+++ b/src/app/movie-container/movie-container.component.html
@@ -9,7 +9,11 @@
                     {{vote_average}}
                 </div>
                 <p>1h45min</p>
-                <!-- <p *ngFor="let genre of genresName"> {{genre}}</p> -->
+                <p class="genre-container">
+                    <span *ngFor="let genre of genresName;let isLast = last;"> {{genre}}<span *ngIf="!isLast">, </span>
+
+                    </span>
+                </p>
             </div>
         </div>
         <div class="play">
