--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -8,4 +8,24 @@
     .search-input-container {
         margin-bottom: 2rem;
     }
+
+    h2 {
+        color: $white;
+        margin-left: 2rem;
+        font-size: 2rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .movies-list-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 2rem;
+        gap: 2rem;
+
+        tp-movies-movie-container-common {
+            width: 45%;
+        }
+    }
 }
