:sparkles: feat: can filter movies by genre

--- a/src/app/movie-container-common/movie-container-common.component.html
+++ b/src/app/movie-container-common/movie-container-common.component.html
@@ -1,5 +1,5 @@
 <li class="movie-container">
-    <img src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" />
+    <img src="{{backgroundImage}}" />
     <p class="title">{{ title }}</p>
     <div class="info-container">
         <div class="rate-container">
