--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -5,6 +5,21 @@
     background-color: $black;
     padding-top: 2rem;
 
+    .filter-genre {
+        cursor: pointer;
+        display: flex;
+        flex-wrap: wrap;
+        color: white;
+
+        div {
+            padding: 1rem;
+            margin: 0.5rem;
+            background-image: $purple-gradient;
+            width: fit-content;
+            border-radius: 2rem;
+        }
+    }
+
     .search-input-container {
         margin-bottom: 2rem;
     }
