--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div routerLink="/movies" class="go-back">
+        <img src="../../assets/img/arrow-left.svg" />
+    </div>
 <div class="profile-fist-content">
     <img class="profile-first-content-img" src="#" alt="user-image" />
     <h2 class="user-name">User Name</h2>
