:twisted_rightwards_arrows: fix: resolved things that make Leo Angry

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="header-wrapper">
-        <span id="logo">
-            <img src="../../assets/img/logo.svg" alt="" />
-            <span class="header-title">Ndelok</span>
-        </span>
-        <span class="header-notification">
-            <img src="../../assets/img/notifications.svg" alt="" />
-        </span>
+    <span id="logo">
+        <img src="../../assets/img/logo.svg" alt="Logo" />
+        <span class="header-title">Ndelok</span>
+    </span>
+    <span class="header-notification">
+        <img src="../../assets/img/notifications.svg" alt="Notification Icon" />
+    </span>
 </header>
