--- a/src/app/movie-container-common/movie-container-common.component.html
+++ b/src/app/movie-container-common/movie-container-common.component.html
@@ -3,7 +3,7 @@
     <p class="title">{{ title }}</p>
     <div class="info-container">
         <div class="rate-container">
-            <img src="../../assets/img/star-icon.svg" alt="">
+            <img src="../../assets/img/star-icon.svg" alt="Star Icon">
             {{vote_average}}
         </div>
         <p>{{release_date}}</p>
