--- a/src/app/movie-container/movie-container.component.html
+++ b/src/app/movie-container/movie-container.component.html
@@ -5,7 +5,7 @@
             <p class="title">{{title}}</p>
             <div class="rate-hour-theme-container">
                 <div class="rate-container">
-                    <img src="../../assets/img/star-icon.svg" alt="">
+                    <img src="../../assets/img/star-icon.svg" alt="Star Icon">
                     {{vote_average}}
                 </div>
                 <p>1h45min</p>
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="play">
-            <img src="../../assets/img/play-icon.svg" alt="">
+            <img src="../../assets/img/play-icon.svg" alt="Play Icon">
         </div>
     </div>
 </div>
