--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -2,7 +2,7 @@
 <section class="homepage-container" *ngIf="movies$ | async as movie">
     <div class="search-input-container">
         <input class="search-input" type="text" placeholder="What are you watching today">
-        <img src="../../assets/img/search-icon.svg" alt="">
+        <img src="../../assets/img/search-icon.svg" alt="Search Icon">
     </div>
 
     <h2>A la une</h2>
