:mag: fix: add alt to img

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,76 +1,76 @@
 <div class="container">
-<div class="profile-fist-content">
-    <img class="profile-first-content-img" src="#" alt="user-image" />
-    <h2 class="user-name">User Name</h2>
-    <h3 class="user-email">Email adress</h3>
-</div>
+    <div class="profile-fist-content">
+        <img class="profile-first-content-img" src="#" alt="user-image" />
+        <h2 class="user-name">User Name</h2>
+        <h3 class="user-email">Email adress</h3>
+    </div>
 
-<div class="option-container">
-    <div class="option-items">
-        <button type="button" class="option-items-button">
-            <a routerLink="">
-                <img src="../../assets/img/bookmarkk.svg" alt="bookmark" />
-                <p>Bookmark</p>
-            </a>
-        </button>
+    <div class="option-container">
+        <div class="option-items">
+            <button type="button" class="option-items-button">
+                <a routerLink="">
+                    <img src="../../assets/img/bookmarkk.svg" alt="bookmark" />
+                    <p>Bookmark</p>
+                </a>
+            </button>
+        </div>
+        <div class="option-items">
+            <button type="button" class="option-items-button">
+                <a routerLink="">
+                    <img src="../../assets/img/history.svg" alt="history" />
+                    <p>History</p>
+                </a>
+            </button>
+        </div>
+        <div class="option-items">
+            <button type="button" class="option-items-button">
+                <a>
+                    <img src="../../assets/img/statistic.svg" alt="statistic" />
+                    <p>Statistic</p>
+                </a>
+            </button>
+        </div>
     </div>
-    <div class="option-items">
-        <button type="button" class="option-items-button">
-            <a routerLink="">
-                <img src="../../assets/img/history.svg" alt="history" />
-                <p>History</p>
-            </a>
-        </button>
-    </div>
-    <div class="option-items">
-        <button type="button" class="option-items-button">
-            <a>
-                <img src="../../assets/img/statistic.svg" alt="statistic" />
-                <p>Statistic</p>
-            </a>
-        </button>
-    </div>
-</div>
 
-<div class="membership-container">
-    <h2 class="membership-title">Membership</h2>
+    <div class="membership-container">
+        <h2 class="membership-title">Membership</h2>
         <button class="membership-wrapper">
             <div class="membership-div">
                 <h3 class="membership-titleh3">Monthly Subscriptions</h3>
                 <h4 class="membership-title4">Subscription until June 14 2021</h4>
             </div>
             <div>
-                <img src="../../assets/img/arrow right.svg" />
+                <img src="../../assets/img/arrow right.svg" alt="right arrow icon" />
             </div>
         </button>
-</div>
+    </div>
 
-<div class="membership-container">
-    <h2 class="membership-title">Bill & Payment</h2>
+    <div class="membership-container">
+        <h2 class="membership-title">Bill & Payment</h2>
         <button class="membership-wrapper">
             <div class="membership-div">
                 <h3 class="membership-titleh3">Billing Details</h3>
                 <h4 class="membership-title4">Visa **** ****1902</h4>
             </div>
             <div>
-                <img src="../../assets/img/arrow right.svg" />
+                <img src="../../assets/img/arrow right.svg" alt="right arrow icon" />
             </div>
         </button>
-</div>
+    </div>
 
-<hr />
+    <hr />
 
-<div class="membership-container">
-    <h2 class="membership-title">Account & Security</h2>
+    <div class="membership-container">
+        <h2 class="membership-title">Account & Security</h2>
         <button class="membership-wrapper">
             <div class="membership-div">
                 <h3 class="membership-titleh3">Your account</h3>
                 <h4 class="membership-title4">Account settings, change number</h4>
             </div>
             <div>
-                <img src="../../assets/img/arrow right.svg" />
+                <img src="../../assets/img/arrow right.svg" alt="right arrow icon" />
             </div>
         </button>
-</div>
+    </div>
 
 </div>
