--- a/src/app/movie-container-common/movie-container-common.component.html
+++ b/src/app/movie-container-common/movie-container-common.component.html
@@ -1,5 +1,5 @@
 <li class="movie-container">
-    <img src="{{backgroundImage}}" />
+    <img src="{{backgroundImage}}" alt="movie background image" />
     <p class="title">{{ title }}</p>
     <div class="info-container">
         <div class="rate-container">
