--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
-  <!-- <tp-movies-test-database></tp-movies-test-database> -->
-  <!-- <tp-movies-app-form></tp-movies-app-form> -->
+<link rel="manifest" href="/manifest.webmanifest">
+<!-- <tp-movies-test-database></tp-movies-test-database> -->
+<!-- <tp-movies-app-form></tp-movies-app-form> -->
