--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,15 +1,15 @@
 <div *ngIf="movie$ | async as movie">
-    <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-header" />
+    <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" loading="lazy" class="image-header" />
     <div routerLink="/movies" class="go-back">
-        <img src="../../assets/img/arrow-left.svg" />
+        <img src="../../assets/img/arrow-left.svg" loading="lazy" />
     </div>
     <div class="share">
-        <img src="../../assets/img/share-icon.svg" />
+        <img src="../../assets/img/share-icon.svg" loading="lazy" />
     </div>
     <div class="singleFilmContent">
         <div class="singleFilmTitle">{{movie.original_title}}</div>
         <div class="single-movie-elements">
-            <span class="movie-star"><img src="../../assets/img/movie_star.svg" />{{movie.vote_average}}</span>
+            <span class="movie-star"><img src="../../assets/img/movie_star.svg" loading="lazy" />{{movie.vote_average}}</span>
             <span class="movie-star">{{movie.status}}</span>
             <span *ngIf="movie.adult" class="movie-star">18+</span>
         </div>
@@ -25,13 +25,14 @@
         <div *ngIf="castMovie$ | async as cast">
             <ul class="cast-list">
                 <li *ngFor="let bbb of cast.cast" class="castLi">
-                    <img src="https://image.tmdb.org/t/p/w500{{bbb.profile_path}}" class="cast-photos"/>
+                    <img src="https://image.tmdb.org/t/p/w500{{bbb.profile_path}}" loading="lazy" class="cast-photos"/>
                     {{bbb.name}}
                 </li>
             </ul>
         </div>
-        <div class="like-container">
-            <img src="../../assets/img/like-heart.svg" class="like-movie" (click)="addMovieToLikes()"/>
+        <div class="like-container" *ngIf="liked; else elseBlock">
+            <img src="../../assets/img/like-full-heart.svg" loading="lazy" class="like-movie" (click)="addMovieToLikes(movie)"/>
         </div>
+        <ng-template #elseBlock><img src="../../assets/img/like-heart.svg" loading="lazy" class="like-movie" (click)="addMovieToLikes(movie)"/></ng-template>
     </div>
 </div>
