Revert ":sparkles: feat: search page"

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,6 +1,9 @@
 <tp-movies-header></tp-movies-header>
 <section class="homepage-container" *ngIf="movies$ | async as movie">
-    <tp-movies-search-container />
+    <div class="search-input-container">
+        <input class="search-input" type="text" placeholder="What are you watching today">
+        <img src="../../assets/img/search-icon.svg" alt="Search Icon">
+    </div>
 
     <h2>A la une</h2>
 
