--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -34,6 +34,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        img{
+            cursor: pointer;
+        }
+
+        .container-notification{
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+            background-color: white;
+            position: absolute;
+            right: 7rem;
+            top: 3rem;
+            width: 19rem;
+            height: 21rem;
+            z-index: 1;
+        }
     }
 
     .wrapper {
