--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -41,7 +41,7 @@
 
         .container-notification{
             border-radius: 0.5rem;
-            padding: 0.5rem;
+            padding: 1.5rem;
             background-color: white;
             position: absolute;
             right: 7rem;
@@ -49,6 +49,12 @@
             width: 19rem;
             height: 21rem;
             z-index: 1;
+
+            .activites-flux{
+                text-align: center;
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
+            }
         }
     }
 
