--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -97,6 +97,7 @@ li {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    color: white
 }
 
 .dot {
@@ -152,4 +153,9 @@ li {
 
 .lllll {
     color: $white
+}
+
+.vu {
+    margin-right: 5px;
+    font-size: 15px;
 }
