--- a/src/app/movie-container-common/movie-container-common.component.html
+++ b/src/app/movie-container-common/movie-container-common.component.html
@@ -1,6 +1,6 @@
 <li class="movie-container">
-    <img src="{{backgroundImage}}" alt="movie background image" />
-    <p class="title">{{ title }}</p>
+    <img src="{{backgroundImage}}" alt="movie background image" routerLink="{{id}}" />
+    <p class="title" routerLink="{{id}}">{{ title }}</p>
     <div class="info-container">
         <div class="rate-container">
             <img src="../../assets/img/star-icon.svg" alt="Star Icon">
